@@ -79,6 +79,11 @@ static int selftest (hashcat_ctx_t *hashcat_ctx, hc_device_param_t *device_param
 
       pw.pw_len = (u32) pw_len - 1;
 
+      if (hashconfig->opts_type & OPTS_TYPE_PT_UPPER)
+      {
+        uppercase ((u8 *) pw_ptr, pw.pw_len);
+      }
+
       pw_t comb; memset (&comb, 0, sizeof (comb));
 
       char *comb_ptr = (char *) &comb.i;
@@ -86,6 +91,11 @@ static int selftest (hashcat_ctx_t *hashcat_ctx, hc_device_param_t *device_param
       memcpy (comb_ptr, hashconfig->st_pass + pw_len - 1, 1);
 
       comb.pw_len = 1;
+
+      if (hashconfig->opts_type & OPTS_TYPE_PT_UPPER)
+      {
+        uppercase ((u8 *) comb_ptr, comb.pw_len);
+      }
 
       if (hashconfig->opts_type & OPTS_TYPE_PT_ADD01)
       {
